# bitrufus

./: .gitignore  CLAUDE.md  README.md  rust-toolchain.toml
BitRufus/: BitRufus.entitlements  BitRufusApp.swift  ContentView.swift
BitRufus.xcodeproj/: project.pbxproj
BitRufus.xcodeproj/project.xcworkspace/xcuserdata/tim.xcuserdatad/: UserInterfaceState.xcuserstate
BitRufus.xcodeproj/xcuserdata/tim.xcuserdatad/xcschemes/: xcschememanagement.plist
BitRufus/Persistence/: AppSettings.swift  TorrentStore.swift
BitRufus/ViewModels/: AppStore.swift
BitRufus/Views/: AddMagnetSheet.swift  DiskSpacePopover.swift  FileSelectionSheet.swift  SettingsView.swift  TorrentListView.swift
BitRufusTests/: BitRufusTests.swift
BitRufusUITests/: BitRufusUITests.swift  BitRufusUITestsLaunchTests.swift
core/: Cargo.toml
core/src/: announce.rs  engine.rs  lib.rs  storage.rs  tracker_proxy.rs  types.rs
docs/plans/: 20260523-01-foundation-skeleton.md  20260523-02-engine-session.md  20260523-03-engine-file-selection.md  20260523-04-engine-stats-controls.md  20260523-05-ui-list-and-add.md  20260523-06-ui-file-selection.md  20260523-07-live-progress.md  20260523-08-ui-controls.md  20260523-09-persistence.md  20260523-10-readme-and-handoff.md  20260614-torrent-file-support.md  20260615-resource-efficiency.md
docs/plans/completed/: 20260523-01-foundation-skeleton.md  20260523-05-ui-list-and-add.md  20260523-07-live-progress.md  20260523-08-ui-controls.md  20260523-10-readme-and-handoff.md  20260523-macos-torrent-mvp.md  20260614-torrent-file-support.md
docs/plans/completed/completed/: 20260615-resource-efficiency.md
scripts/: AppIcon.icns  build-rust.sh  copy-icon.sh
