[package]
name = "bitrufus_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "bitrufus_core"
crate-type = ["staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
uniffi = { version = "0.29", features = ["build", "cli", "tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
thiserror = "2"
librqbit = "8.1.1"
directories = "6"

[dev-dependencies]
tempfile = "3"
